--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "express": "^4.14.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router": "^3.0.2"
+    "react-router": "^3.0.2",
+    "webpack": "^1.14.0"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
@@ -41,6 +42,6 @@
     "sass-loader": "^6.0.3",
     "script-loader": "^0.7.0",
     "style-loader": "^0.14.1",
-    "webpack": "^2.3.2"
+    "webpack": "^1.14.0"
   }
 }
