--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "express": "^4.14.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router": "^3.0.2",
-    "webpack": "^1.14.0"
+    "react-router": "^3.0.2"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
@@ -35,22 +34,22 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.22.0",
-    "css-loader": "^0.27.3",
+    "css-loader": "^3.5.3",
     "expect": "^1.20.2",
-    "foundation-sites": "6.2.0",
+    "foundation-sites": "^6.6.3",
     "jquery": "3.4.0",
-    "karma": "^1.5.0",
+    "karma": "^5.0.3",
     "karma-chrome-launcher": "^2.0.0",
-    "karma-mocha": "^1.3.0",
+    "karma-mocha": "^2.0.1",
     "karma-mocha-reporter": "^2.2.3",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.3",
-    "mocha": "^3.2.0",
+    "mocha": "^7.1.2",
     "node-sass": "^4.5.0",
     "react-addons-test-utils": "^15.4.2",
     "sass-loader": "^6.0.3",
     "script-loader": "^0.7.0",
     "style-loader": "^0.14.1",
-    "webpack": "^1.14.0"
+    "webpack": "^4.43.0"
   }
 }
