--- a/package.json
+++ b/package.json
@@ -38,14 +38,14 @@
     "expect": "^1.20.2",
     "foundation-sites": "^6.6.3",
     "jquery": "3.5.0",
-    "karma": "^5.0.3",
+    "karma": "6.3.14",
     "karma-chrome-launcher": "^2.0.0",
     "karma-mocha": "^2.0.1",
     "karma-mocha-reporter": "^2.2.3",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.3",
     "mocha": "^7.1.2",
-    "node-sass": "^4.5.0",
+    "node-sass": "7.0.0",
     "react-addons-test-utils": "^15.4.2",
     "sass-loader": "^6.0.3",
     "script-loader": "^0.7.0",
